Amino acid mutation search (#3)
* Add amino acid search instance

* Amino acid mutation search API
